add JPA persistence with Supabase and global exception handling